k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-todo-app
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-todo-app
  template:
    metadata:
      labels:
        app: spring-todo-app
    spec:
      containers:
        - name: spring-todo-app
          image: janithad/spring-todo-app:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
